[package]
name = "uwiki-types"
version = "0.2.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Helper libraries for uwiki"
readme = "README.md"
repository = "https://github.com/jsvana/uwiki-types/"
keywords = ["wiki"]
categories = ["api-bindings"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
